--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "devDependencies": {
-    "@chainlink/contracts": "^0.8.0",
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@nomicfoundation/hardhat-verify": "^2.0.3",
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
-    "@typechain/ethers-v6": "^0.5.0",
-    "@typechain/hardhat": "^9.0.0",
-    "chai": "^4.2.0",
-    "dotenv": "^16.3.1",
-    "ethers": "^6.9.2",
-    "hardhat": "^2.19.4",
-    "hardhat-deploy": "^0.11.45",
-    "hardhat-deploy-ethers": "^0.4.1",
-    "hardhat-gas-reporter": "^1.0.8",
-    "solidity-coverage": "^0.8.5",
-    "typechain": "^8.3.0"
-  }
+  "name": "Your NFT Name",
+  "description": "NFT Description",
+  "image": "https://cdn.shopify.com/s/files/1/0070/7032/files/BestCrowdfundingSites_resized-03.jpg?v=1628129221",
+  "attributes": [
+    {
+      "trait_type": "Trait Name",
+      "value": "Trait Value"
+    },
+    {
+      "trait_type": "Trait Name",
+      "value": "Trait Value"
+    }
+  ]
 }
