--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Your NFT Name",
-  "description": "NFT Description",
+  "name": "token1",
+  "description": "NFT",
   "image": "https://cdn.shopify.com/s/files/1/0070/7032/files/BestCrowdfundingSites_resized-03.jpg?v=1628129221",
   "attributes": [
     {
