--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "token1",
-  "description": "NFT",
-  "image": "https://cdn.shopify.com/s/files/1/0070/7032/files/BestCrowdfundingSites_resized-03.jpg?v=1628129221",
+  "name": "token2",
+  "description": "NFT2",
+  "image": "https://media.graphassets.com/9kz75siUQGWoT16tgQfQ",
   "attributes": [
     {
       "trait_type": "Trait Name",
