--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "token2",
   "description": "NFT2",
-  "image": "https://media.graphassets.com/9kz75siUQGWoT16tgQfQ",
+  "image": "https://laasyaart.com/wp-content/uploads/2019/07/Satya-Narayan-Lal-Karn-_-Moti-Karn_-Doli-bride-going-to-her-husband_s-home-_-Natural-dyes-on-handmade-paper-_-7-x-11-inches-_-650-Framed-1.jpg",
   "attributes": [
     {
       "trait_type": "Trait Name",
