--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "token2",
   "description": "NFT2",
-  "image": "https://nriol.com/images/indian-folk-paints.jpg",
+  "image": "https://www.shutterstock.com/image-vector/vector-design-woman-performing-classical-260nw-399437095.jpg",
   "attributes": [
     {
       "trait_type": "Trait Name",
