--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "token2",
   "description": "NFT2",
-  "image": "https://www.shutterstock.com/image-vector/vector-design-woman-performing-classical-260nw-399437095.jpg",
+  "image": "https://cdn.britannica.com/15/60415-050-9697B4B8/Bharata-natyam-dance-drama-India.jpg",
   "attributes": [
     {
       "trait_type": "Trait Name",
