--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "token3",
-  "description": "NFT3",
-  "image": "https://cdn.britannica.com/15/60415-050-9697B4B8/Bharata-natyam-dance-drama-India.jpg",
+  "name": "token1",
+  "description": "NFT1",
+  "image": "https://i.pinimg.com/564x/dc/64/f9/dc64f956f8cc063de47e703b497ba56a.jpg",
   "attributes": [
     {
       "trait_type": "Trait Name",
